# gi-notifier

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  renovate.json
gi_notifier/: conf.py  config.py  core.py  file.py  main.py  runner.py  temp.py  util.py
gi_notifier/data/book/: admonition.py  ballad.py  conflict.py  contention.py  diligence.py  elegance.py  equity.py  freedom.py  gold.py  ingenuity.py  justice.py  kindling.py  light.py  order.py  praxis.py  prosperity.py  resistance.py  transience.py
gi_notifier/data/char/: __init__.py  albedo.py  alhaitham.py  aloy.py  amber.py  arataki_itto.py  arlecchino.py  baizhu.py  barbara.py  beidou.py  bennett.py  candace.py  charlotte.py  chasca.py  chevreuse.py  chiori.py  chongyun.py  citlali.py  clorinde.py  collei.py  cyno.py  dehya.py  diluc.py  diona.py  dori.py  emilie.py  escoffier.py  eula.py  faruzan.py  fischl.py  freminet.py  furina.py  gaming.py  ganyu.py  gorou.py  hu_tao.py  iansan.py  ifa.py  ineffa.py  jean.py  (+61 more)
gi_notifier/handler/: chat_handler.py  command_handler.py
gi_notifier/model/: __init__.py  model.py
gi_notifier/models/: __init__.py  base.py  models.py
gi_notifier/scheduler/: __init__.py
gi_notifier/temp/: __init__.py  characters.py  message.py  resin_management.py
